# entgvsd1

./: .gitignore  CMakeLists.txt  README.md  README.rst  entgvsd_root.txt  readthedocs.yaml
bnu/: A00_LAI3g_modis_entpftrevcrop.F90  A00_LAI3g_modis_entpftrevcrop.f  A00_LAI3g_modis_entpftrevcrop_UMB.f  A00a_bnu_laimax.F90  A00b_regrid.F90  A01_lc_laimax.F90  A01_lc_laimax.f  A01_lc_laimax.f90  A01_modis_entpftrevcrop.f  A01a_carrer_mean.F90  A01a_soil_albedo.F90  A01b_soil_albedo.F90  A01b_veg_height.f90  A01f_albmodis_gridfill.F90  A01h_veg_height.F90  A01h_veg_height.f90  A02_lc_lai_doy.F90  A02_lc_lai_doy.f  A02_lc_lai_doy.f90  A03_aggregating_height.f  A03_lc_lai_monthly.F90  A03_lc_lai_monthly.f  A03_lc_lai_monthly.f90  A03_veg_height.f  A03_veg_height.f90  A04_aggregating_lc_laimax.f  A04_reclass_annual.F90  A04_trim_laimax_1kmx1km.F90  A04_trim_laimax_1kmx1km.f  A05_aggregating_lc_lai_month.f  A05_reclass_doy.F90  A05_trim_laidoy_1kmx1km.F90  A05_trim_laidoy_1kmx1km.f  A05_trim_laidoy_1kmx1km.f90  A06_reclass_monthly.F90  A06_trim_laimonth_1kmx1km.f  A06_trim_lc_laimax_laimonth.F90  A06_trim_lc_laimax_laimonth.f  A07_aggregating_height_gcm.f  A07_regrid.F90  (+49 more)
bnu/mk/: A00b_regrid_hr.mk  A00b_regrid_lr.mk  A01b_soil_albedo.mk  A01b_soil_albedo_hr.mk  A01h_veg_heights.mk  A04_reclass_annual.mk  A05_reclass_doy.mk  A07_regrid_hr.mk  A08_nc.mk  A08_ts.mk
cmake/: FindNetCDF4_C.cmake  FindNetCDF4_Fortran.cmake
data/: entdata
data/climstats/: CRU_GPCC_C4.f  CRU_GPCC_C4frac_1981-2010_1kmx1km.cdl  CRU_GPCC_C4norm_1981-2010_1kmx1km.cdl  CRU_GPCC_c4norm.f  ClimMedit.cdl  MAIN.sh  Pdry.cdl  Pmave.cdl  Pmm12.cdl  Pmmhot.cdl  Pmmmax.cdl  TC10C.cdl  TC22.cdl  TC22P25.cdl  TCinave.cdl  TCmax.cdl  TCmaxmonth.cdl  Tcold.cdl
data/climstats/CRU_GPCC/: CRU_Temp_Interp_to_1kmx1km.f  CRU_Temp_Interp_to_1kmx1km_monthly.f  CRU_temp_month.cdl  GPCC_Precip_Interp_to_1kmx1km.f  GPCC_Precip_Interp_to_1kmx1km_monthly.f  GPCC_prec_month.cdl  GPCC_v6_PREC_means_1981-2010_1kmx1km.cdl  LAI3g_Interp_to_1kmx1kmK.f  MAIN.sh  cru_ts3.22_TS_means_1981-2010_1kmx1km.cdl
data/height/: EntGVSDmosaic17_height_1440x720.cdl  EntGVSDmosaic17_height_144x90.cdl  EntGVSDmosaic17_height_1kmx1km_lai3g.cdl  EntGVSDmosaic17_heightstd_1440x720.cdl  EntGVSDmosaic17_heightstd_144x90.cdl  Ent_veg_height_1kmx1km.cdl  entdata  veg_height_std.f
data/lc/MODIS_MCD12Q1/: README.txt
data/lc/MODIS_MCD12Q1/code/: 1_merge.sh  2_partition.sh  3_subgrid.sh  EntGVSD_v1_lc_partition_MODIS_IGBP_PFT_500m.c  Makefile  README_partition.txt  merge.c  (+2 more)
data/lc_crops/Monfreda2008/: README.txt
data/soilalbedo/Carrer2014_Montes/: NIR_Alb_soil_yearly.byLandCover.1kmx1km.cdl  SW_Alb_soil_yearly.byLandCover.1kmx1km.cdl  VIS_Alb_soil_yearly.byLandCover.1kmx1km.cdl  hntr_soilalbedo.f  hntr_soilalbedo_giss_bands.f  hntr_soilalbedo_ij.f  hntr_soilalbedo_nc.f  soil_albedo_by_lc.f  soil_albedo_by_lc_bis.f  soilalbedo_giss_bands_1kmx1km.cdl
inputs_manual/carrer/: nccompress.py
python/: download_data.py  entdata  nasaportal.py
scripts/: copy_entgvsd0.py
slib/: CMakeLists.txt  arrayutil.f  assign_laimax.F90  carrer.F90  cdlparser.py  chunker.f90  chunker_mod.f90  chunkparams.f90  conversions.f  convertnc_util.f90  crop_merge_lai_sparse_split_bare.f90  cropmerge_laisparse_splitbare.f90  ent_labels.F90  ent_labels.f90  ent_params.f90  ent_params.f90.in  entgvsd  entgvsd.sh.in  entgvsd_config.f90.in  entgvsd_config.hpp.in  entgvsd_create_nc.sh  entgvsd_link_input.py  entgvsd_util.f90  entparams.f90  gridfill.f90  hntr.f90  hntr4_mod.f90  hntr_mod.f90  ioutil_mod.f90  paths.f90  soilalbedo.F90  trim_tiny.F90  xent.py
slib/examples/: README.txt  example_chunker.f90  example_create_nc.f90  example_hntr.f90  example_partial.f90  test.f90
sphinx/: Makefile
sphinx/source/: building.rst  conf.py  index.rst  spackenv.rst
src/: B01_bnu_laimax.F90  B02_lc_laimax_modis_entpftrevcrop.F90  B02_lc_modis_entpftrevcrop.F90  B03_regrid.F90  B03_regrid_snowice.F90  B04_veg_height.F90  B05_carrer_mean.F90  B06_albmodis_gridfill.F90  B07_soil_albedo.F90  B08_lc_laimax.F90  B09_lc_lai_doy.F90  B10_lc_lai_monthly.F90  B11_reclass_annual.F90  B12_reclass_doy.F90  B13_reclass_monthly.F90  B14_regrid.F90  B14a_ent17_pure_checksum.F90  B15_regrid_controls.F90  B16_trim.F90  B17_checksum.F90  B18_modele.F90  B19_to_modele_format.py  B20_plots.R  B20b_plots_custom.R  B21_plots_to_png.py  B21b_plot_to_png.R  B22_plots_custom.R  B23_plot_soilalbedo.bash  B23_plot_soilalbedo.bashscript  B24_soilalbedo_to_modelE.R  EntGVSD_ef.R  aggregating_laimonth.f  fetch.sh  foo_openmp.f  iterplot.py  makefile  mkgen  mkgen.sh  plotglobal.py  plotregion.py  (+7 more)
src/mk/: A00_LAI3g_modis_entpftrevcrop.mk  A01_lc_laimax.mk  A01a_carrer_mean.mk  A01f_albmodis_gridfill.mk  A02_lc_lai_doy.mk  A03_lc_lai_monthly.mk  A06_reclass_monthly.mk  A07_regrid_lr.mk  A08_mc.mk  A08_pu.mk  A08_tr.mk
templates/EntMM_lc_laimax_1kmx1km/: 01_ever_br_early_lc.cdl  02_ever_br_late_lc.cdl  03_ever_nd_early_lai.cdl  05_cold_br_early_lc.cdl  07_drought_br_lc.cdl  08_decid_nd_lai.cdl  10_arid_shrub_lai.cdl  11_c3_grass_per_lai.cdl  12_c4_grass_lc.cdl  15_crops_c3_herb_lai.cdl  18_snow_ice_lc.cdl  water_lai.cdl
templates/EntMM_lc_laimax_1kmx1kmA/: 04_ever_nd_late_lc.cdl  06_cold_br_late_lai.cdl  09_cold_shrub_lc.cdl  13_c3_grass_ann_lc.cdl  14_c3_grass_arct_lai.cdl  16_crops_c4_herb_lai.cdl  17_crops_woody_lc.cdl  19_bare_sparse_lai.cdl  water_lc.cdl
templates/checksum/: 01_ever_br_early.cdl  01_ever_br_early_lc.cdl  02_ever_br_late.cdl  03_ever_nd_early.cdl  04_ever_nd_late.cdl  05_cold_br_early.cdl  06_cold_br_late.cdl  07_drought_br.cdl  08_decid_nd.cdl  09_cold_shrub.cdl  10_arid_shrub.cdl  11_c3_grass_per.cdl  12_c4_grass.cdl  13_c3_grass_ann.cdl  14_c3_grass_arct.cdl  15_crops_c3_herb.cdl  16_crops_c4_herb.cdl  17_crops_woody.cdl  18_snow_ice.cdl  19_bare_sparse.cdl  EntLAI_check_sum_Jun_1kmx1km.cdl  EntLandcover_check_sum_Jun_1kmx1km.cdl  EntMM29lc_lai_for_1kmx1km.cdl  EntPFTs_percell_check_sum_Jun_1kmx1km.cdl  EntdominantPFT_LC_check_sum_Jun_1kmx1km.cdl  EntdominantPFT_check_sum_Jun_1kmx1km.cdl
(+14 files in other folders)
